--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -2,3 +2,14 @@
 .app-container{
   min-height: 350px;
 }
+
+
+
+footer {
+  text-align: center;
+  padding: 1em;
+  max-width: 80px;
+  position: fixed;
+  top: 0;
+  right: 25px;
+}
