--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -5,11 +5,11 @@
 
 
 
-footer {
+/* footer {
   text-align: center;
   padding: 1em;
   max-width: 80px;
   position: fixed;
   top: 0;
   right: 25px;
-}
+} */
